# IcBerg

./: .env.example  .gitignore  README.md  check_sandbox_escape.py  docker-compose.yml  pyproject.toml  test_hallucination_crash.py  test_round_robin.py
backend/: Dockerfile  main.py  requirements.txt
backend/agent/: agent.py  prompts.py  tools.py
backend/api/: routes.py  schemas.py
backend/core/: context_builder.py  database.py  embeddings.py  guardrails.py  llm_adapter.py  qdrant_manager.py  sandbox.py  validator.py
backend/data/: loader.py
frontend/: Dockerfile  app.py  requirements.txt
scripts/: clean_cache.sh  reset_db.py
tests/: conftest.py
tests/contract/: test_embeddings.py  test_llm_adapter.py  test_qdrant_manager.py
tests/unit/: test_context_builder.py  test_database.py  test_guardrails.py  test_loader.py  test_sandbox.py  test_schemas.py  test_tools.py  test_validator.py
